2005-06-04  Matti Aarnio  <mea@zmailer.org>

	* transports/hold/hold.c:
	    Of course the 'hold age:nnn' had internal comparison wrong way..

2005-05-19  Matti Aarnio  <mea@zmailer.org>

	* router/libdb/ldap.c:
	    Indicate failure, if ldap session definition, or bind fails
	    in any way.

2005-05-09  Alex Kiernan <alex.kiernan@gmail.com>

	* sfio/src/lib/sfio/sfhdr.h:
	    "I've been applying this as long as I can remember to make
	     builds work on Solaris"

2005-05-06  Matti Aarnio  <mea@zmailer.org>

	* configure.in:
	    Make '--disable-ndbm' and '--disable-gdbm' work as
	    their name implies.  Also have '--without-ipv6'

	* router/libdb/ldap.c
	    Integrated and debugged "ldap-new" into ldap.c.
	    Missing thing was automagic LDAP connection rebind,
	    when a lookup fails (after LDAP server restarts, or
	    connection does otherwise break.)

	* router/libdb/ldap-new.c:
	    Removed as unnecessary

	* transports/smtp/smtp.c:
	    For IPv4 the connect() used wrong size 'address-size' parameter,
	    and recently Linux systems have become lot more picky about it...

2005-04-27  Matti Aarnio  <mea@zmailer.org>

	* transports/hold/hold.c, man/hold.8.in:
	    Support holding until message age is at least specified.
	    A variation of "timeout", but in a more generic form.

2005-03-24  Matti Aarnio  <mea@zmailer.org>

	* man/smtp.8.in, transports/smtp/smtp.c, transports/smtp/smtp.h:
	    New '-O ignore-ezmlm' option.

	* transports/libta/ctlopen.c, include/ta.h,
	  transports/expirer/expirer.c, man/expirer.8.in,
	  man/manual-expirer.8.in:
	    Added optional '-u' selector for expirer to help
	    queue purge tasks in some situations, when target
	    X has lots of recipients, and only one of them is
	    failing with 400 codes and thus filling the queue...

	* smtpserver/smtpserver.c, smtpserver/policytest.h, 
	  smtpserver/mxverify.c,   smtpserver/policytest.c,
	  smtpserver/cfgread.c,    man/smtpserver.8.in: